GH-Actions - Fixed alignment

--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -142,7 +142,6 @@ body {
         border:0px;
         border-radius:6px;
         display:flex;
-        flex-wrap: wrap;
         justify-content:flex-start;
         align-content: center;
         align-items: flex-start;
